fixed issue with text not showing completely on firefox

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -121,7 +121,7 @@ ul {
     width: 0;
   }
   to {
-    width: 15em;
+    width: 15.6em;
   }
 }
 
